--- a/index.html
+++ b/index.html
@@ -6,20 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>To do list</title>
     <link rel="stylesheet" href="assets/css/todos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <script src="assets/js/lib/jquery-3.4.1.min.js"></script>
 </head>
 <body>
+
     <div id="container">
-        <h1>To-Do List</h1>
-        <input type="text">
+        <h1>To-Do List <i class="fa fa-plus-circle" aria-hidden="true"></i></h1>
+        <input type="text" placeholder="Add New Todo">
 
         <ul>
-            <li> <span>X</span> Go To Potions Class</li>
-            <li> <span>X</span> Buy Nespan Robes</li>
-            <li> <span>X</span> Visit Hgrid</li>
+            <li> <span><i class="fa fa-trash"></i></span> Go To Potions Class</li>
+            <li> <span><i class="fa fa-trash"></i></span> Buy Nespan Robes</li>
+            <li> <span><i class="fa fa-trash"></i></span> Visit Hgrid</li>
         </ul>
-        
-
     </div>
 
     <script src="assets/js/todos.js"></script>
